Fix z-index bug with nav bar
Introduced in
https://github.com/graysonwright/website/commit/9f487e1bb

--- a/app/assets/stylesheets/nav.css.scss
+++ b/app/assets/stylesheets/nav.css.scss
@@ -5,6 +5,7 @@
 $nav-height: 2 * $gutter;
 
 nav {
+  z-index: 1;
   background-color: $green;
   padding: 0.5*$gutter $gutter;
 
